# open-knowledge-graphs

./: .gitignore  CONTRIBUTING.md  LICENSE  NOTICE  README.md  fix_3.py  ontology.ttl
.github/ISSUE_TEMPLATE/: resource-batch.yml
.github/workflows/: deploy.yml  update-data.yml
api/: package-lock.json  package.json  wrangler.toml
api/scripts/: seed.js
api/src/: index.js
data/: categories.json  ontologies.json  ontologies.ttl  page_qids.json  software.json  software.ttl  software_types.json  uri_registry.json
docs/: adding-resources-through-wikidata.md
mcp-server/: pyproject.toml
mcp-server/src/okg_mcp/: __main__.py  client.py  format.py  models.py  server.py
scripts/: category_classifier.py  create_kgx_item.py  create_knwler_item.py  create_monarch_kg_item.py  create_ontofelia_item.py  create_owlrl_item.py  create_powder_s_item.py  create_rdfgraphgen_item.py  create_rdfsharp_item.py  create_task2_items.py  create_timbr_item.py  create_trustgraph_item.py  create_turingdb_item.py  create_vocbench_item.py  create_web_algebra_item.py  enrich_ontology_language_items.py  fetch_data.py  generate_pages.py  populate_earl_stub.py
site/: app.js  index.html  llms.txt  sitemap.xml  style.css
site/ontology/actionable-intelligence-retrieval-system/: index.html
site/ontology/adamlink/: index.html
site/ontology/adverse-event-reporting-ontology/: index.html
site/ontology/affymetrix/: index.html
site/ontology/agriculture-product-types-ontology/: index.html
site/ontology/agronomy-ontology/: index.html
site/ontology/agrovoc/: index.html
(+1597 files in other folders)
